--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
               <p id="action-message">Make your move</p>
 
+       <script src="app.js"></script>
        <script src="https://unpkg.com/ionicons@4.5.5/dist/ionicons.js"></script>
        </body>
 </html>
